--- a/src/20.Hosts/Ghost.Host.Website/Ghost.Host.Website.csproj
+++ b/src/20.Hosts/Ghost.Host.Website/Ghost.Host.Website.csproj
@@ -8,6 +8,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\50.Data\Ghost.Data\Ghost.Data.csproj" />
   </ItemGroup>
 
 </Project>
