--- a/src/20.Hosts/Ghost.Host.Website/appsettings.json
+++ b/src/20.Hosts/Ghost.Host.Website/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "ApplicationName": "Ghost Game",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GhostDb": "Server=.;Database=GhostDb;Trusted_Connection=True;Connection Timeout=60;ConnectRetryCount=10;ConnectRetryInterval=10;"
+  }
 }
