Add GhostController and swagger

--- a/src/20.Hosts/Ghost.Host.Website/Ghost.Host.Website.csproj
+++ b/src/20.Hosts/Ghost.Host.Website/Ghost.Host.Website.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\50.Data\Ghost.Data\Ghost.Data.csproj" />
+    <ProjectReference Include="..\Ghost.Host.Mvc\Ghost.Host.Mvc.csproj" />
   </ItemGroup>
 
 </Project>
