--- a/src/50.Data/Ghost.Data.Interface/Ghost.Data.Interface.csproj
+++ b/src/50.Data/Ghost.Data.Interface/Ghost.Data.Interface.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\60.Common\Ghost.Model\Ghost.Model.csproj" />
+  </ItemGroup>
 
 </Project>
