--- a/src/50.Data/Ghost.Data/Ghost.Data.csproj
+++ b/src/50.Data/Ghost.Data/Ghost.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\60.Model\Ghost.Model\Ghost.Model.csproj" />
+    <ProjectReference Include="..\Ghost.Data.Interface\Ghost.Data.Interface.csproj" />
   </ItemGroup>
 
   <ItemGroup>
