--- a/src/30.Service/Ghost.Service/Ghost.Service.csproj
+++ b/src/30.Service/Ghost.Service/Ghost.Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\50.Data\Ghost.Core\Ghost.Core.csproj" />
     <ProjectReference Include="..\..\50.Data\Ghost.Data.Interface\Ghost.Data.Interface.csproj" />
     <ProjectReference Include="..\Ghost.Service.Interface\Ghost.Service.Interface.csproj" />
