--- a/src/20.Hosts/Ghost.Host.Website/Ghost.Host.Website.csproj
+++ b/src/20.Hosts/Ghost.Host.Website/Ghost.Host.Website.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\40.Business\Ghost.Business\Ghost.Business.csproj" />
     <ProjectReference Include="..\..\50.Data\Ghost.Data\Ghost.Data.csproj" />
     <ProjectReference Include="..\Ghost.Host.Mvc\Ghost.Host.Mvc.csproj" />
   </ItemGroup>
