--- a/src/30.Service/Ghost.Service/Ghost.Service.csproj
+++ b/src/30.Service/Ghost.Service/Ghost.Service.csproj
@@ -11,8 +11,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\40.Business\Ghost.Business.Interface\Ghost.Business.Interface.csproj" />
-    <ProjectReference Include="..\..\50.Data\Ghost.Core\Ghost.Core.csproj" />
     <ProjectReference Include="..\..\50.Data\Ghost.Data.Interface\Ghost.Data.Interface.csproj" />
+    <ProjectReference Include="..\..\60.Common\Ghost.Core\Ghost.Core.csproj" />
     <ProjectReference Include="..\Ghost.Service.Interface\Ghost.Service.Interface.csproj" />
   </ItemGroup>
 
