--- a/src/40.Business/Ghost.Business.Interface/Ghost.Business.Interface.csproj
+++ b/src/40.Business/Ghost.Business.Interface/Ghost.Business.Interface.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\30.Service\Ghost.Service.Interface\Ghost.Service.Interface.csproj" />
   </ItemGroup>
 
